--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="favicon.ico" />
-    <title>GoStylens - Your Smart Outfit Assistant</title>
+    <title>GoStylens - Your personal stylist on the go.</title>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600;700;800&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap");
-
       @font-face {
         font-family: "Clash Display";
         src: url("fonts/ClashDisplay-Bold.otf") format("opentype");
@@ -75,8 +73,8 @@
         --card: #232b23;
         --text: #e8f5e8;
         --muted: #8a9e8a;
-        --font-display: "Clash Display", "Space Grotesk", sans-serif;
-        --font-body: "Metropolis", "Plus Jakarta Sans", sans-serif;
+        --font-display: "Clash Display", sans-serif;
+        --font-body: "Metropolis", sans-serif;
       }
 
       body {
@@ -94,7 +92,7 @@
         z-index: 100;
         display: flex;
         justify-content: center;
-        padding: 16px 20px;
+        padding: 16px;
       }
       nav {
         width: 100%;
@@ -286,8 +284,8 @@
 
       .phone {
         position: absolute;
-        width: 270px;
-        height: 540px;
+        width: 300px;
+        height: 600px;
         border-radius: 32px;
         background: var(--primary);
         border: 2px solid rgba(184, 233, 148, 0.12);
@@ -329,7 +327,7 @@
       }
 
       .phone.left {
-        transform: translateX(-290px) perspective(1200px) rotateY(25deg)
+        transform: translateX(-330px) perspective(1200px) rotateY(25deg)
           scale(0.85);
         z-index: 1;
         opacity: 0.6;
@@ -341,21 +339,21 @@
         opacity: 1;
       }
       .phone.right {
-        transform: translateX(290px) perspective(1200px) rotateY(-25deg)
+        transform: translateX(330px) perspective(1200px) rotateY(-25deg)
           scale(0.85);
         z-index: 1;
         opacity: 0.6;
         filter: brightness(0.7);
       }
       .phone.hidden-left {
-        transform: translateX(-450px) perspective(1200px) rotateY(40deg)
+        transform: translateX(-520px) perspective(1200px) rotateY(40deg)
           scale(0.65);
         z-index: 0;
         opacity: 0;
         pointer-events: none;
       }
       .phone.hidden-right {
-        transform: translateX(450px) perspective(1200px) rotateY(-40deg)
+        transform: translateX(520px) perspective(1200px) rotateY(-40deg)
           scale(0.65);
         z-index: 0;
         opacity: 0;
@@ -827,9 +825,28 @@
         .hero-text h1 {
           font-size: 32px;
         }
+        .hero {
+          padding-top: 70px;
+        }
         .phone-slider {
-          transform: scale(0.7);
-          height: 500px;
+          transform: scale(0.8);
+          height: 600px;
+        }
+        .phone.left {
+          transform: translateX(-260px) perspective(1200px) rotateY(25deg)
+            scale(0.85);
+        }
+        .phone.right {
+          transform: translateX(260px) perspective(1200px) rotateY(-25deg)
+            scale(0.85);
+        }
+        .phone.hidden-left {
+          transform: translateX(-410px) perspective(1200px) rotateY(40deg)
+            scale(0.65);
+        }
+        .phone.hidden-right {
+          transform: translateX(410px) perspective(1200px) rotateY(-40deg)
+            scale(0.65);
         }
         .nav-left,
         .nav-right {
