--- a/index.html
+++ b/index.html
@@ -850,6 +850,40 @@
         text-align: center;
         border-top: 1px solid rgba(184, 233, 148, 0.06);
       }
+      .social-links {
+        display: flex;
+        gap: 16px;
+        justify-content: center;
+        margin-bottom: 20px;
+      }
+      .social-links a {
+        width: 40px;
+        height: 40px;
+        border-radius: 10px;
+        border: 1px solid rgba(184, 233, 148, 0.1);
+        background: rgba(184, 233, 148, 0.04);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition:
+          border-color 0.3s,
+          background 0.3s,
+          transform 0.3s;
+      }
+      .social-links a:hover {
+        border-color: rgba(184, 233, 148, 0.3);
+        background: rgba(184, 233, 148, 0.1);
+        transform: translateY(-2px);
+      }
+      .social-links a svg {
+        width: 18px;
+        height: 18px;
+        fill: var(--muted);
+        transition: fill 0.3s;
+      }
+      .social-links a:hover svg {
+        fill: var(--tertiary);
+      }
       footer p {
         color: var(--muted);
         font-size: 13px;
@@ -1335,6 +1369,37 @@
     </section>
 
     <footer>
+      <div class="social-links">
+        <a
+          href="https://www.tiktok.com/@gostylens"
+          target="_blank"
+          aria-label="TikTok"
+        >
+          <svg viewBox="0 0 24 24">
+            <path
+              d="M16.6 5.82s.51.5 0 0A4.278 4.278 0 0 1 15.54 3h-3.09v12.4a2.592 2.592 0 0 1-2.59 2.5c-1.42 0-2.6-1.16-2.6-2.6 0-1.72 1.66-3.01 3.37-2.48V9.66c-3.45-.46-6.47 2.22-6.47 5.64 0 3.33 2.76 5.7 5.69 5.7 3.14 0 5.69-2.55 5.69-5.7V9.01a7.35 7.35 0 0 0 4.3 1.38V7.3s-1.88.09-3.24-1.48z"
+            />
+          </svg>
+        </a>
+        <a href="https://x.com/go_stylens" target="_blank" aria-label="X">
+          <svg viewBox="0 0 24 24">
+            <path
+              d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+            />
+          </svg>
+        </a>
+        <a
+          href="https://www.instagram.com/gostylens"
+          target="_blank"
+          aria-label="Instagram"
+        >
+          <svg viewBox="0 0 24 24">
+            <path
+              d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"
+            />
+          </svg>
+        </a>
+      </div>
       <p>© 2026 GoStylens. All rights reserved. Your style, elevated.</p>
     </footer>
 
