feat: use light scheme

--- a/privacy.html
+++ b/privacy.html
@@ -664,5 +664,6 @@
       <p>Don't hesitate to contact us if you have any questions.</p>
       <p class="contact">Via Email: support@gostylens.com</p>
     </div>
+    <script>window.scrollTo(0, 0);</script>
   </body>
 </html>
