feat: add scrollMarginTop to features and how sections

--- a/index.html
+++ b/index.html
@@ -769,6 +769,7 @@
       -webkit-backdrop-filter: blur(16px);
       position: relative;
       overflow: hidden;
+      scroll-margin-top: 100px;
     }
 
     .features::before {
@@ -869,6 +870,7 @@
     /* HOW IT WORKS */
     .how-it-works {
       padding: 72px 40px;
+      scroll-margin-top: 100px;
     }
 
     .how-inner {
